# poletaevvlad.github.io

./: .gitignore  Dockerfile  Makefile  _config.yaml  deploy.sh  index.html  load_repo_info.py  pyproject.toml
.github/workflows/: build.yaml
_data/: education.yaml  languages.yaml  projects.yaml  repos.yaml
_includes/: project_description.html
_layouts/: base.html  projects.html
_pages/: projects.md
_sass/: _base.sass  _colors.sass  _extra.sass  _header.sass  _projects.sass  _reset.sass  styles.sass
assets/: styles.css  styles.css.map
resume/: .gitignore  Makefile  document.pug  package-lock.json  package.json  requirements.txt
resume/styles/: styles.sass
