[tool.poetry]
name = "poletaevvlad.github.io"
version = "0.1.0"
description = ""
authors = ["Vlad Poletaev <poletaev.vladislav@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^6.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
